SVD for color image

--- a/ImageSVD.ipynb
+++ b/ImageSVD.ipynb
@@ -325,7 +325,8 @@
     "# Application of SVD in image compression. \n",
     "# Why would we need SVD? One of the most widely used application is in image compression. \n",
     "# Theorem states that, if we have an SVD of a matrix A (original image) of rank $r$, and given $\\nu < r$, then $A_{\\nu} = \\sum_{j = 1}^{\\nu} \\sigma_ju_jv_j^*$ is the BEST $\\nu$-rank approximation of A\n",
-    "# In practice, even with $\\nu = 0.1 r$, we can get a quite good representation of the original image"
+    "# In practice, even with $\\nu = 0.1 r$, we can get a quite good representation of the original image\n",
+    "# What is the rank of $\\sum_{j = 1}^{\\nu} \\sigma_ju_jv_j^*$? It is rank $\\nu$. Why? If we look at $\\sigma_ju_jv_j^*$, it is a rank-1 matrix, since its columns are just different multiples of $u_j$ column vector, scaled by elements of $v_j$, i.e they are all multiple of one another."
    ]
   },
   {
@@ -355,6 +356,7 @@
     }
    ],
    "source": [
+    "#let's use an image that is not square (Duke is my Frenchie puppy)\n",
     "img = Image.open('Duke.jpg')\n",
     "plt.figure(figsize = (6,9))\n",
     "plt.imshow(img)"
@@ -387,6 +389,7 @@
     }
    ],
    "source": [
+    "# image in gray scale\n",
     "img_gray = img.convert('LA')\n",
     "plt.figure(figsize = (6,9))\n",
     "plt.imshow(img_gray)"
@@ -415,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import imageio\n",
@@ -442,6 +447,13 @@
    "source": [
     "#we see that the image has 3 channel R-G-B\n",
     "img_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Since SVD works with 2-D matrices easily, we just extract one channel of the image to show a simple example"
    ]
   },
   {
@@ -519,6 +531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now we perform SVD and use different low-rank approximation of the image. We see that at rank 50, the image quality is quite good for human eyes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
@@ -579,6 +598,13 @@
     "img_reconstructed = np.matrix(U[:,:100])*np.diag(Sigma[:100])*np.matrix(V[:100,:])\n",
     "plt.title('Using rank 100 approximation')\n",
     "plt.imshow(img_reconstructed,cmap='gray')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's see the dimension of $U, \\Sigma, V$"
    ]
   },
   {
@@ -688,14 +714,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# Reconstruct color image"
+    "# Now let's try to reconstruct the color image with all three RGB channels using low-rank approximation. We apply SVD to each individual channel and combine three of them together to form a color image"
    ]
   },
   {
@@ -706,6 +730,7 @@
    },
    "outputs": [],
    "source": [
+    "# read the image again\n",
     "img_matrix = imageio.imread('Duke.jpg')"
    ]
   },
@@ -717,9 +742,16 @@
    },
    "outputs": [],
    "source": [
+    "# apply SVD to 1 channel and return low-rank approximation\n",
+    "# @param: A: the image matrix\n",
+    "#         rank: the low rank value we want to use\n",
     "def reconstruct_matrix(A,rank):\n",
     "    U,Sigma,V = np.linalg.svd(A)\n",
     "    return (np.matrix(U[:,:rank])*np.diag(Sigma[:rank])*np.matrix(V[:rank,:]))\n",
+    "\n",
+    "# combine 3 channels into 1 color image using low-rank approximation\n",
+    "# @param: img_matrix: the image matrix\n",
+    "#         rank: the low rank value we want to use\n",
     "def reconstruct_RGB(img_matrix,rank):\n",
     "    new_img = np.zeros(img_matrix.shape)\n",
     "    new_img[:,:,0] = reconstruct(img_matrix[:,:,0],rank)\n",
